# xrocket

./: README.md  pyproject.toml
xrocket/: __init__.py  _pay.py  _trade.py
xrocket/pay/: __init__.py  app.py  currencies.py  invoice.py  multi_cheque.py  subscription.py
xrocket/trade/: __init__.py  account.py  order_book.py  orders.py  pairs.py  rates.py  time_series.py
